# Duplexity

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  setup.py
docs/source/: api_reference.rst  conf.py  deterministic.rst  index.rst  installation.rst  requirements.txt
docs/source/guide/: contributing.rst  license.rst
docs/source/metrics/: ensemble.rst  image.rst  metrics.rst  metrics_overview.rst  metricss_overview.rst  pixelwise.rst  probabilistic.rst  spatial.rst
docs/source/plot/: fss_plot.rst  metrics_map_plot.rst  plot.rst  rapsd_plot.rst
duplexity/: __init__.py  deterministic.py  deterministic_score.py  ensemble.py  get_metric.py  image.py  metric_map.py  pixelwise.py  plot.py  probabilistic.py  rapsd.py  spatial.py  usage.ipynb  utils.py  visualization.py
duplexity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_deterministic_score.py  test_metric_map.py  test_pixelwise.py
validation/: environment.yaml
validation/nn_validation/: deterministic.py  metric_map.py  metrics.py  usage.ipynb
validation/source/: conf.py  index.rst
validation/tests/: test_metrics.py
